Markers are added. Now, Stop numbers are visible on the map.

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,9 @@
 
   .map-container {
       height: 50vh; /* Adjust height of the map on small screens */
+      width: 75%;
+      margin-top: 20px;
+      
   }
 }
 
@@ -55,6 +58,8 @@
 }
 
 .map-container {
-  width: 100%;
-  height: 100vh; /* Full viewport height */
+  margin-top: 20px;
+  width: 40%;
+  height: 90% !important;
 }
+
